--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <section class="background intro">
+    <section class="bg intro">
         <div class="main_content">
             <div class="first">
                 <img src="img/zorowp12.png" alt="zoro_wanted_poster">
