--- a/extra/trailer.html
+++ b/extra/trailer.html
@@ -12,6 +12,6 @@
     </style>
 </head>
 <body>
-    <video id="myvideo" src="zoro4k.mkv" controls  autoplay width="100%">Zoro King of Hell - One Piece「AMV_Edit][4K]</video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/UWTL94XSRO8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
